# noisemon

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  project.yml  pyproject.toml  test_project.py  test_project_nel.py
components/: custom_components.py  rel_model.py  rel_ruler_pipe.py  span_getter.py  transformer_model.py  transformer_pipe.py
configs/: config_trf.cfg  nel.cfg  nel_trf.cfg  nlp_filled.cfg  nlp_trf.cfg
etls/: README.md
etls/text_to_rdf/t_rex/: README.md  input_schema.py
labelstudio/: labelstudio_editor.cfg
noisemon/: __main__.py  _queue.py  app.py  crud.py  database.py  dataset_populator.py  entity_linker.py  entity_linker.tests.py  entity_recognizer.py  initialize_account_script.py  logger.py  models.py  processor.py  processor.tests.py  processor_tests.py  rabbitmq_connection.py  schemas.py  settings.py  ticker.py  vector_index.py  wikidata.py
noisemon/components/: custom_components.py  rel_pipe.py  span_vector_assigner.py
noisemon/components/entity_linking/: entity_linker.py
noisemon/components/entity_recognition/: entity_recognizer.py
noisemon/data_processing/: README.md  dataset_populator.py  entity_linker.py  ner_extractor.py  processor.py  processor_tests.py  ticker.py  wikidata.py
noisemon/data_retrieval/: telegram.py  telegram_data_source.py  telegram_data_source_tests.py
noisemon/database/: database.py  wikidata.py
noisemon/dataset_population/: dataset_populator.py  ticker_strategy.py
noisemon/domain/models/: __init__.py  document.py  document_origin.py  entity.py  entity_span.py  language.py  mention.py  qid.py  resource.py  resource_link.py  statement.py  triplet.py
noisemon/domain/services/: ner_model.py  ner_ruler_pipe.py  span_vector_assigner.py
noisemon/domain/services/consumer/: consumer.py
noisemon/domain/services/entity_linking/: entity_linker.py
noisemon/domain/services/entity_recognition/: entity_recognizer.py
noisemon/domain/services/knowledge_representation/: rdf_convertor.py
noisemon/domain/services/language_detection/: language_detector.py
noisemon/domain/services/language_representation/: contextual_embedder.py
noisemon/domain/services/processor/: processor.py
noisemon/domain/services/repository/: repository.py
noisemon/evaluation/: entity_linking.py  entity_recognition.py
noisemon/infrastructure/consumer/: _queue.py  consumer_queue.py  rabbitmq_connection.py
noisemon/infrastructure/entity_linking/local/: aggregate_entities.py  entity_linker.py  entity_linker_tests.py
noisemon/infrastructure/entity_recognition/local/: entity_recognizer.py  entity_recognizer_tests.py
noisemon/infrastructure/language_detection/: language_detector.py
noisemon/infrastructure/language_representation/: contextual_embedder.py
noisemon/infrastructure/language_vectorization/: contextual_embedder.py  contextual_embedder_tests.py
noisemon/infrastructure/processor/: processor.py
noisemon/infrastructure/repository_local/: repository.py
noisemon/infrastructure/repository_postgres/: database_models.py  noisemon.sql  noisemon_maint.sql  repository.py
noisemon/models/: __init__.py  data_chunk.py  document.py  entity.py  mention.py  response.py  vector.py
noisemon/schemas/: schemas.py
noisemon/tools/: cache_to_redis.py  char_span_to_vector.py  flat_map.py  flat_map.tests.py  flat_map_tests.py  metrics.py  metrics_tests.py  retry_request.py  similarity.py  span_to_vector.py  span_to_vector.tests.py  ticker.py  tools.py  vector_index.py
notebooks/: boilerplate_elimination.ipynb  building_faiss_index.ipynb  company_name_retrieval.ipynb  data_wrangling.ipynb  dataset_and_kb_creation_en.ipynb  dataset_and_kb_creation_ru.ipynb  dataset_generation.ipynb  deeppavlov_entity_linking.ipynb  entity_matching.ipynb  entity_recognition_and_faiss_ann.ipynb  generating_search_querys_for_qid_and_predicate_pairs.ipynb  get_organization_entities.ipynb  get_organization_predicates.ipynb  getting_company_descriptions_from_wikidata.ipynb  getting_predicate_names_and_desriptions_from_wikidata.ipynb  kb_population_notattributed.ipynb  kb_population_strategy_-_merging_entities_with_tickers.ipynb  kb_population_t-rex.ipynb  kb_population_wikidata_query.ipynb  knowledge_base_creation.ipynb  mention_memory.ipynb  merging_entities_with_tickers.ipynb  ner.ipynb  notebook_video.ipynb  pyfuseki_interop.ipynb  querying_dbpedia.ipynb  querying_wikidata.ipynb  spacy_pipeline.ipynb  spacy_pipeline_demonstration.ipynb  span_vector.ipynb  topic_deduplication.ipynb  wikidata_RQA_dataset.ipynb  wikipedia_processing.ipynb
notebooks/_archive/: boilerplate_elimination.ipynb  building_faiss_index.ipynb  data_wrangling.ipynb  dataset_and_kb_creation_ru.ipynb  dataset_generation.ipynb  kb_population_t-rex.ipynb  pyfuseki_interop.ipynb  querying_dbpedia.ipynb  querying_wikidata.ipynb  spacy_pipeline.ipynb  spacy_pipeline_demonstration.ipynb  topic_deduplication.ipynb  wikidata_RQA_dataset.ipynb  wikidata_completion_dataset.ipynb
notebooks/entity_linking/: kb_population_notattributed.ipynb  kb_population_wikidata_query.ipynb  wikipedia_processing.ipynb
notebooks/entity_recognition/: evaluation.ipynb  local_impl_hf.ipynb
notebooks/knowledge_representation/: llm_generation.ipynb
scripts/: aggregate_entities.py  char_span_to_vector.py  convert_labelstudio_to_spacy.py  create_faiss_index.py  custom_functions.py  download_spacy_model.sh  evaluate.py  evaluate_entity_linking.py  feed_channel_dump.py  feed_channel_dump_via_zmq.py  feed_from_database.py  fill_in_uuid7.py  filter_entities.py  initialize_account.py  old_populate_database_with_vectors.py  parse_data.py  populate_database_with_entities.py  populate_database_with_vectors.py  populate_db_with_qids.py  reconcile_vector_indices.py  reconcile_vector_indices.tests.py  recreate_tables.py  upload_dataset.py
tests/: noisemon_tests.py
