[tool.poetry]
name = "noisemon"
version = "0.4.1"
description = "NEL pipeline"
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.8.2"
python-dotenv = "^0.18.0"
regex = "^2021.7.6"
SPARQLWrapper = "^1.8.5"
faiss-cpu = "^1.7.1"
reticker = "^3.1.3"
dill = "^0.3.4"
torch = "^1.9.1"
Cython = "^0.29.24"
dateparser = "^1.1.0"
psycopg2-binary = "^2.9.2"
redis = "^4.0.2"
scipy = "^1.9.0"
pywikibot = "^7.7.1"
pymediawiki = "^0.7.2"
wikitextparser = ">=0.47.5"
ipykernel = "^6.17.0"
sqlalchemy = "2.0.0b4"
polars = "^0.15.11"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"
typer = "^0.7.0"
transformers = "^4.26.1"
spacy-alignments = "^0.9.0"
pytest = "^7.4.0"


[tool.poetry.dev-dependencies]
ipykernel = "^6.0.1"
pylint = "^2.9.3"
notebook = "^6.4.0"
black = {version = "^21.7b0", allow-prereleases = true}
types-dateparser = "^1.0.8"
SQLAlchemy-Utils = "^0.37.9"
jupyterlab = "^3.2.8"
pandas = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"
wikipedia = "^1.4.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = "*_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
warn_return_any = true
ignore_missing_imports = true
warn_unused_configs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/noisemon/"
files = "$MYPY_CONFIG_FILE_DIR/noisemon/**/*.py"
exclude = "$MYPY_CONFIG_FILE_DIR/noisemon/**/*.tests.py"
python_executable = "$MYPY_CONFIG_FILE_DIR/.venv/bin/python"

