[tool.poetry]
name = "noisemon"
version = "0.1.1"
description = "NEL pipeline"
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^0.18.0"
regex = "^2021.7.6"
faiss-cpu = "^1.7.1"
dateparser = "^1.1.0"
scipy = "^1.9.0"
scikit-learn = "^1.2.1"
transformers = "^4.30.2"
datasets = "^2.13.1"
torch = "^2.0.1"
spacy-alignments = "^0.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.0.1"
notebook = "^6.4.0"
types-dateparser = "^1.0.8"
jupyterlab = "^3.2.8"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
tqdm = "^4.64.1"
typer = "^0.7.0"
ruff = "^0.0.275"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = "*_tests.py"

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
# Add "Q" to the list of enabled codes.
select = ["E", "F", "Q"]


ignore = [
    "E501", # Never enforce `E501` (line length violations).
    "E701", # multiple statements on one line (colon) -  i use them for early returns
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.flake8-quotes]
docstring-quotes = "double"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
warn_return_any = true
ignore_missing_imports = true
warn_unused_configs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/noisemon/"
files = "$MYPY_CONFIG_FILE_DIR/noisemon/**/*.py"
exclude = "$MYPY_CONFIG_FILE_DIR/noisemon/**/*.tests.py"
python_executable = "$MYPY_CONFIG_FILE_DIR/.venv/bin/python"

